--- a/Weather Research Data.ipynb
+++ b/Weather Research Data.ipynb
@@ -1,4 +1,3 @@
-##WeatherDataExploration
 {
  "cells": [
   {
@@ -7,7 +6,7 @@
     "_uuid": "2fbff8a456f78421e8875e08e5f022184fd95424"
    },
    "source": [
-    "> In order to build our forecasting model, we will have to opt for using CRISP-DM methodology."
+    "> In order to build forecasting model, I have opted for using CRISP-DM methodology."
    ]
   },
   {
