Update Weather Research Data.ipynb

--- a/Weather Research Data.ipynb
+++ b/Weather Research Data.ipynb
@@ -33,7 +33,7 @@
     "_uuid": "dea8b62ffb699648adb7c68394c5e54534444ed3"
    },
    "source": [
-    "1.1 **Gather background information**\n",
+    "**1.1 Gather background information**\n",
     "\n",
     " *Compiling the business background *\n",
     "\n",
