--- a/Weather Research Data.ipynb
+++ b/Weather Research Data.ipynb
@@ -33,21 +33,21 @@
     "_uuid": "dea8b62ffb699648adb7c68394c5e54534444ed3"
    },
    "source": [
-    "**1.1 Gather background information**\n",
+    "**Gathered background information**\n",
     "\n",
-    " *Compiling the business background *\n",
+    " *Compiled the business background *\n",
     "\n",
     "this project is about historical weather around Szeged, Hungary , from 2006 to 2016\n",
     "\n",
-    "**Defining business objectives**\n",
+    "**Defined business objectives**\n",
     "\n",
-    "Make data more accessible and understandable for everyone.\n",
+    "Made data more accessible and understandable for everyone.\n",
     "\n",
-    "Provide fast analytics for the different Factors Affecting Weather .\n",
+    "Provided fast analytics for the different Factors Affecting Weather .\n",
     "\n",
-    "use different prediction and classification algorithms\n",
+    "I used different prediction and classification algorithms\n",
     "\n",
-    "calculating and comparing evaluation measures\n",
+    "Calculated and compared evaluation measures\n",
     "\n"
    ]
   },
@@ -57,9 +57,9 @@
     "_uuid": "076ca1160d13477a63950a132730cbd94410b918"
    },
    "source": [
-    "**1.2 Assessing the situation**\n",
+    "**2. Assessed the situation**\n",
     "\n",
-    "** Resource Inventory **\n",
+    "** Resourceed Inventory **\n",
     "\n",
     "Data : dataset contains in a practical format 10 years (2006-2016) of hourly data in just a single file.\n",
     "\n",
@@ -74,7 +74,7 @@
     "_uuid": "7899795183bc32ed1c71e53623bfd70f90b32c06"
    },
    "source": [
-    "**1.3 Objective of the project**\n",
+    "**3. Main Objectives of the project**\n",
     "\n",
     " the objective of this project is to analyze the weather data and extract the hypotheses to arrive at a prediction"
    ]
@@ -85,7 +85,7 @@
     "_uuid": "875855d88e7236c31146ef9da08c7fc53d35a02e"
    },
    "source": [
-    "**2.Collect initial data**\n",
+    "**4 .Collected initial data from kaggle**\n",
     "\n",
     "Dataset from Kaggle : https://www.kaggle.com/budincsevity/szeged-weather"
    ]
@@ -96,7 +96,7 @@
     "_uuid": "1cf619c13d7c27fdb4254a3b06c2cf8e37fbc808"
    },
    "source": [
-    "**2.1 Data Exploration**\n",
+    "**5. Data Exploration**\n",
     "\n",
     "Exploration is to understand how all these columns are related and the value structures so the correlation between these data"
    ]
