Update Weather Research Data.ipynb

--- a/Weather Research Data.ipynb
+++ b/Weather Research Data.ipynb
@@ -59,11 +59,11 @@
    "source": [
     "**2. Assessed the situation**\n",
     "\n",
-    "** Resourceed Inventory **\n",
+    "** Resource Inventory **\n",
     "\n",
     "Data : dataset contains in a practical format 10 years (2006-2016) of hourly data in just a single file.\n",
     "\n",
-    "Computing resources : hp , i3 processor, 4 GB RAM\n",
+    "Computing resources : hp , i5 processor, 16 GB RAM\n",
     "\n",
     "Programming languages and libraries : python ( Numpy, pandas, matplotlib, seaborn, tensorflow, scikitlearn)"
    ]
