Update Weather Research Data.ipynb

--- a/Weather Research Data.ipynb
+++ b/Weather Research Data.ipynb
@@ -6,7 +6,7 @@
     "_uuid": "2fbff8a456f78421e8875e08e5f022184fd95424"
    },
    "source": [
-    "> In order to build forecasting model, I have opted for using CRISP-DM methodology."
+    "In order to build forecasting model, I have opted for using CRISP-DM methodology."
    ]
   },
   {
