Update Weather Research Data.ipynb

--- a/Weather Research Data.ipynb
+++ b/Weather Research Data.ipynb
@@ -15,7 +15,7 @@
     "_uuid": "16c9744a1d5997d407c5ff182fa1607997b59d6e"
    },
    "source": [
-    "**1. Business understanding**"
+    "**- Business understanding**"
    ]
   },
   {
@@ -57,7 +57,7 @@
     "_uuid": "076ca1160d13477a63950a132730cbd94410b918"
    },
    "source": [
-    "**2. Assessed the situation**\n",
+    "**- Assessed the situation**\n",
     "\n",
     "** Resource Inventory **\n",
     "\n",
@@ -74,7 +74,7 @@
     "_uuid": "7899795183bc32ed1c71e53623bfd70f90b32c06"
    },
    "source": [
-    "**3. Main Objectives of the project**\n",
+    "**- Main Objectives of the project**\n",
     "\n",
     " the objective of this project is to analyze the weather data and extract the hypotheses to arrive at a prediction"
    ]
@@ -85,7 +85,7 @@
     "_uuid": "875855d88e7236c31146ef9da08c7fc53d35a02e"
    },
    "source": [
-    "**4 .Collected initial data from kaggle**\n",
+    "**- Collected initial data from kaggle**\n",
     "\n",
     "Dataset from Kaggle : https://www.kaggle.com/budincsevity/szeged-weather"
    ]
@@ -96,7 +96,7 @@
     "_uuid": "1cf619c13d7c27fdb4254a3b06c2cf8e37fbc808"
    },
    "source": [
-    "**5. Data Exploration**\n",
+    "**- Data Exploration**\n",
     "\n",
     "Exploration is to understand how all these columns are related and the value structures so the correlation between these data"
    ]
