Update Weather Research Data.ipynb

--- a/Weather Research Data.ipynb
+++ b/Weather Research Data.ipynb
@@ -15,7 +15,7 @@
     "_uuid": "16c9744a1d5997d407c5ff182fa1607997b59d6e"
    },
    "source": [
-    "**- Business understanding**"
+    "**Business understanding**"
    ]
   },
   {
@@ -57,7 +57,7 @@
     "_uuid": "076ca1160d13477a63950a132730cbd94410b918"
    },
    "source": [
-    "**- Assessed the situation**\n",
+    "**Assessed the situation**\n",
     "\n",
     "** Resource Inventory **\n",
     "\n",
@@ -85,7 +85,7 @@
     "_uuid": "875855d88e7236c31146ef9da08c7fc53d35a02e"
    },
    "source": [
-    "**- Collected initial data from kaggle**\n",
+    "**Collected initial data from kaggle**\n",
     "\n",
     "Dataset from Kaggle : https://www.kaggle.com/budincsevity/szeged-weather"
    ]
