Update Weather Research Data.ipynb

--- a/Weather Research Data.ipynb
+++ b/Weather Research Data.ipynb
@@ -85,7 +85,7 @@
     "_uuid": "875855d88e7236c31146ef9da08c7fc53d35a02e"
    },
    "source": [
-    "**Collected initial data from kaggle**\n",
+    "**I Collected initial data from kaggle**\n",
     "\n",
     "Dataset from Kaggle : https://www.kaggle.com/budincsevity/szeged-weather"
    ]
