Update Weather Research Data.ipynb

--- a/Weather Research Data.ipynb
+++ b/Weather Research Data.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "**Gathered background information**\n",
     "\n",
-    " *Compiled the business background *\n",
+    " *I compiled the business background *\n",
     "\n",
     "this project is about historical weather around Szeged, Hungary , from 2006 to 2016\n",
     "\n",
@@ -47,7 +47,7 @@
     "\n",
     "I used different prediction and classification algorithms\n",
     "\n",
-    "Calculated and compared evaluation measures\n",
+    "I calculated and compared evaluation measures\n",
     "\n"
    ]
   },
