Update Weather Research Data.ipynb

--- a/Weather Research Data.ipynb
+++ b/Weather Research Data.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "this project is about historical weather around Szeged, Hungary , from 2006 to 2016\n",
     "\n",
-    "**Defined business objectives**\n",
+    "**I defined business objectives**\n",
     "\n",
     "Made data more accessible and understandable for everyone.\n",
     "\n",
