Update Weather Research Data.ipynb

--- a/Weather Research Data.ipynb
+++ b/Weather Research Data.ipynb
@@ -37,7 +37,7 @@
     "\n",
     " *I compiled the business background *\n",
     "\n",
-    "this project is about historical weather around Szeged, Hungary , from 2006 to 2016\n",
+    "This project is about historical weather around Szeged, Hungary , from 2006 to 2016\n",
     "\n",
     "**I defined business objectives**\n",
     "\n",
