Update Weather Research Data.ipynb

--- a/Weather Research Data.ipynb
+++ b/Weather Research Data.ipynb
@@ -33,7 +33,7 @@
     "_uuid": "dea8b62ffb699648adb7c68394c5e54534444ed3"
    },
    "source": [
-    "**Gathered background information**\n",
+    "**I gathered background information**\n",
     "\n",
     " *I compiled the business background *\n",
     "\n",
