Update Weather Research Data.ipynb

--- a/Weather Research Data.ipynb
+++ b/Weather Research Data.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "**I defined business objectives**\n",
     "\n",
-    "Made data more accessible and understandable for everyone.\n",
+    "I Made data more accessible and understandable for everyone.\n",
     "\n",
     "Provided fast analytics for the different Factors Affecting Weather .\n",
     "\n",
