Update Weather Research Data.ipynb

--- a/Weather Research Data.ipynb
+++ b/Weather Research Data.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "I made data more accessible and understandable for everyone.\n",
     "\n",
-    "Provided fast analytics for the different Factors Affecting Weather .\n",
+    "I have provided fast analytics for the different Factors Affecting Weather .\n",
     "\n",
     "I used different prediction and classification algorithms\n",
     "\n",
