Update Weather Research Data.ipynb

--- a/Weather Research Data.ipynb
+++ b/Weather Research Data.ipynb
@@ -24,7 +24,7 @@
     "_uuid": "89d2739687e6151953bb4e88a3a3bd6021ba9ae2"
    },
    "source": [
-    "This first step is essentially about understanding the business, the need for the specific project and the resources that we have. "
+    "The first step is essentially about understanding the business, the need for the specific project and the resources that we have. "
    ]
   },
   {
