Update Weather Research Data.ipynb

--- a/Weather Research Data.ipynb
+++ b/Weather Research Data.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "**I gathered background information**\n",
     "\n",
-    " *I compiled the business background *\n",
+    " *I have compiled the business background *\n",
     "\n",
     "This project is about historical weather around Szeged, Hungary , from 2006 to 2016\n",
     "\n",
