--- a/Weather Research Data.ipynb
+++ b/Weather Research Data.ipynb
@@ -1,4 +1,123 @@
-   {
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "_uuid": "2fbff8a456f78421e8875e08e5f022184fd95424"
+   },
+   "source": [
+    "> In order to build our forecasting model, we will have to opt for using CRISP-DM methodology."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "_uuid": "16c9744a1d5997d407c5ff182fa1607997b59d6e"
+   },
+   "source": [
+    "**1. Business understanding**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "_uuid": "89d2739687e6151953bb4e88a3a3bd6021ba9ae2"
+   },
+   "source": [
+    "This first step is essentially about understanding the business, the need for the specific project and the resources that we have. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "_uuid": "dea8b62ffb699648adb7c68394c5e54534444ed3"
+   },
+   "source": [
+    "1.1 **Gather background information**\n",
+    "\n",
+    " *Compiling the business background *\n",
+    "\n",
+    "this project is about historical weather around Szeged, Hungary , from 2006 to 2016\n",
+    "\n",
+    "**Defining business objectives**\n",
+    "\n",
+    "Make data more accessible and understandable for everyone.\n",
+    "\n",
+    "Provide fast analytics for the different Factors Affecting Weather .\n",
+    "\n",
+    "use different prediction and classification algorithms\n",
+    "\n",
+    "calculating and comparing evaluation measures\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "_uuid": "076ca1160d13477a63950a132730cbd94410b918"
+   },
+   "source": [
+    "**1.2 Assessing the situation**\n",
+    "\n",
+    "** Resource Inventory **\n",
+    "\n",
+    "Data : dataset contains in a practical format 10 years (2006-2016) of hourly data in just a single file.\n",
+    "\n",
+    "Computing resources : hp , i3 processor, 4 GB RAM\n",
+    "\n",
+    "Programming languages and libraries : python ( Numpy, pandas, matplotlib, seaborn, tensorflow, scikitlearn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "_uuid": "7899795183bc32ed1c71e53623bfd70f90b32c06"
+   },
+   "source": [
+    "**1.3 Objective of the project**\n",
+    "\n",
+    " the objective of this project is to analyze the weather data and extract the hypotheses to arrive at a prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "_uuid": "875855d88e7236c31146ef9da08c7fc53d35a02e"
+   },
+   "source": [
+    "**2.Collect initial data**\n",
+    "\n",
+    "Dataset from Kaggle : https://www.kaggle.com/budincsevity/szeged-weather"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "_uuid": "1cf619c13d7c27fdb4254a3b06c2cf8e37fbc808"
+   },
+   "source": [
+    "**2.1 Data Exploration**\n",
+    "\n",
+    "Exploration is to understand how all these columns are related and the value structures so the correlation between these data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "_uuid": "0c2c7ecf0041363b962777130b709205c14447e5"
+   },
+   "source": [
+    "**importing libraries **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
+    "_kg_hide-input": false,
+    "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a"
+   },
    "outputs": [],
    "source": [
     "#Data manipulation libraries : \n",
