Update Weather Research Data.ipynb

--- a/Weather Research Data.ipynb
+++ b/Weather Research Data.ipynb
@@ -6,7 +6,7 @@
     "_uuid": "0c2c7ecf0041363b962777130b709205c14447e5"
    },
    "source": [
-    "**importing libraries **"
+    "**Importing libraries **"
    ]
   },
   {
